<resources>
    <string name="app_name">TriviaApp</string>
    <string name="add_question">Add Question</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="delete_quiz">Delete Quiz</string>
    <string name="enter_question_here">Enter Question Here</string>
    <string name="enter_correct_answer_here">Enter Correct Answer Here</string>
    <string name="enter_first_wrong_answer_here">Enter First Wrong Answer Here</string>
    <string name="correct_answer_goes_here">Correct Answer Goes Here</string>
    <string name="first_wrong_answer_goes_here">First Wrong Answer Goes Here</string>
    <string name="second_wrong_answer_goes_here">Second Wrong Answer Goes Here</string>
    <string name="third_wrong_answer_goes_here">Third Wrong Answer Goes Here</string>
    <string name="save_question">Save Question</string>
    <string name="correct_answer_here">Correct Answer Here</string>
    <string name="first_wrong_answer_here">First Wrong Answer Here</string>
    <string name="second_wrong_answer_here">Second Wrong Answer Here</string>
    <string name="third_wrong_answer_here">Third Wrong Answer Here</string>
    <string name="question">Question</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="next">Next</string>
    <string name="wrong_answer_text">Wrong. The correct answer is %1$s!</string>
    <string name="correct">Correct!</string>
    <string name="number_of_correct_answers">You answered %1$d questions correctly!</string>
</resources>
