<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/reallyDarkBlue">

    <TextView
        android:id="@+id/quiz_question_textview"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif-monospace"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/answerOneButton"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@android:color/black"
        android:fontFamily="serif-monospace"
        android:text="@string/answer_1"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/answerTwoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question_textview" />

    <Button
        android:id="@+id/answerTwoButton"
        android:layout_width="153dp"
        android:layout_height="48dp"
        android:background="@android:color/black"
        android:fontFamily="serif-monospace"
        android:text="@string/answer_2"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/answerThreeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerOneButton" />

    <Button
        android:id="@+id/answerThreeButton"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:fontFamily="serif-monospace"
        android:text="@string/answer_3"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/answerFourButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerTwoButton" />

    <Button
        android:id="@+id/answerFourButton"
        android:layout_width="149dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/black"
        android:fontFamily="serif-monospace"
        android:text="@string/answer_4"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerThreeButton" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/black"
        android:fontFamily="serif-monospace"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerFourButton" />

</android.support.constraint.ConstraintLayout>